# composecraft

./: .gitignore  CONSTITUTION.md  PHASE-1-BRIEF.md  package.json  pnpm-lock.yaml  vitest.config.ts
.multi-claude/fixtures/: phase1-packets.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
